modules/security-group-in-80-443-out-all/security-group-in-80-443-out-all.tf
resource "aws_security_group" "security-group-in-80-443-out-all" {
  name        = "security-group-in-80-443-out-all"
  description = "Security group for Terraform Enterprise instance"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
